Fix: Add script tag to load external JavaScript file

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <textarea 
                         id="textInput"
                         class="w-full bg-slate-800/50 border border-cyan-500/30 rounded-lg px-4 py-3 text-gray-300 placeholder-gray-500 focus:border-cyan-500 focus:outline-none focus:ring-2 focus:ring-cyan-500/20 transition min-h-[300px] resize-vertical"
-                        placeholder="Enter or paste the text you want to analyze here.\n\nMinimum 50 characters required for accurate detection."
+                        placeholder="Enter or paste the text you want to analyze here.&#10;&#10;Minimum 50 characters required for accurate detection."
                     ></textarea>
                     
                     <div class="flex items-center justify-between mt-3">
@@ -381,4 +381,7 @@
         </div>
     </footer>
 
-    <script>
+    <!-- External JavaScript -->
+    <script src="script.js"></script>
+</body>
+</html>
